# emulator

./: Cargo.toml
src/: acc_processor.rs  arithmetic.rs  cisc_processor.rs  common.rs  flag_register.rs  lib.rs  memory.rs  num_type_conversions.rs  risc_processor.rs  stack.rs  stack_processor.rs  system.rs  tightly_packed_array.rs
src/executable/: executable.rs  flags.rs  mod.rs  segment_meta.rs  segments.rs
