[package]
name = "monistode-emulator"
version = "0.2.5"
edition = "2021"
description = "An emulator for the monistode set of ISA's"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
ux = "0.1.5"
monistode-binutils = "0.1.3"
